Testing code edit and commit functionality.

--- a/index.html
+++ b/index.html
@@ -4,5 +4,6 @@
   </head>
   <body>
     <p>If you see this, something was configured right.</p>
+    <p>If you see this extra line, a line of code was edited and committed without failure.</p>
   </body>
 </html>
